@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2013-2017 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2013-2018 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -155,7 +155,7 @@
         <junit.version>4.12</junit.version>
         <args4j.version>1.0</args4j.version>
 
-        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+        <module.path>${project.build.directory}/mods</module.path>
         <!-- This will work ONLY if mvn is run from root folder. In case of runing from submodules - fail :( -->
         <javadoc.links.dir>${user.dir}/tools/javadoc-link</javadoc.links.dir>
         <glassfish.findbugs.version>1.7</glassfish.findbugs.version>
@@ -165,12 +165,15 @@
         <findbugs.version>3.0.1</findbugs.version>
         <skipSources>true</skipSources>
         <skipOsgiTests>true</skipOsgiTests>
-        <netbeans.hint.jdkPlatform>JDK_1.7</netbeans.hint.jdkPlatform>
+        <netbeans.hint.jdkPlatform>JDK_9</netbeans.hint.jdkPlatform>
         <felix.junit4osgi>1.0.0</felix.junit4osgi>
         <felix.osgi.core>1.4.0</felix.osgi.core>
         <jmockit.version>1.34</jmockit.version>
         <copyright.template.file>tools/config/copyright.txt</copyright.template.file>
         <copyright.exclude.file>tools/config/copyright-exclude</copyright.exclude.file>
+        <mrjar.sourceDirectory>${project.basedir}/src/main/java-mr</mrjar.sourceDirectory>
+        <base.java.level>7</base.java.level>
+        <upper.java.level>9</upper.java.level>
     </properties>
 
     <dependencyManagement>
@@ -245,7 +248,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.5.0</version>
                     <extensions>true</extensions>
                     <dependencies>
                         <dependency>
@@ -495,14 +498,13 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>prepare-endorsed</id>
+                        <id>prepare-upgrade-module-path</id>
                         <phase>validate</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <skip>${maven.endorsed.skip}</skip>
-                            <outputDirectory>${endorsed.dir}</outputDirectory>
+                            <outputDirectory>${module.path}/api</outputDirectory>
                             <silent>false</silent>
                             <includeArtifactIds>jaxb-api</includeArtifactIds>
                         </configuration>
@@ -576,6 +578,31 @@
                 <groupId>org.glassfish.build</groupId>
                 <artifactId>gfnexus-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <release>${upper.java.level}</release>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>base-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <source>1.7</source>
+                            <target>1.7</target>
+                            <excludes>
+                                <exclude>module-info.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -594,7 +621,7 @@
 
     <profiles>
         <profile>
-            <id>endorsed-dirs</id>
+            <id>modules-path</id>
             <activation>
                 <jdk>[1.7,9)</jdk>
             </activation>
@@ -605,7 +632,10 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <compilerArgs>
-                                <arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>
+                                <arg>--upgrade-module-path</arg>
+                                <arg>${module.path}/api</arg>
+                                <arg>--module-path</arg>
+                                <arg>${module.path}</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -613,62 +643,11 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <additionalJOption>-J-Djava.endorsed.dirs=${endorsed.dir}</additionalJOption>
+                            <additionalJOption>--upgrade-module-path</additionalJOption>
+                            <additionalJOption>${module.path}/api</additionalJOption>
+                            <additionalJOption>--module-path</additionalJOption>
+                            <additionalJOption>${module.path}</additionalJOption>
                         </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jdk9-setup</id>
-            <activation>
-                <jdk>9</jdk>
-            </activation>
-            <modules>
-                <module>jaxb-jxc-jdk9</module>
-                <module>jaxb-xjc-jdk9</module>
-            </modules>
-            <properties>
-                <skipOsgiTests>true</skipOsgiTests>
-            </properties>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.felix</groupId>
-                            <artifactId>maven-bundle-plugin</artifactId>
-                            <configuration>
-                                <instructions>
-                                    <_failok>true</_failok>
-                                </instructions>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>default-compile</id>
-                                <configuration>
-                                    <source>9</source>
-                                    <target>9</target>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>base-compile</id>
-                                <goals>
-                                    <goal>compile</goal>
-                                </goals>
-                                <configuration>
-                                    <excludes>
-                                        <exclude>module-info.java</exclude>
-                                    </excludes>
-                                </configuration>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -886,6 +865,10 @@
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>cobertura-maven-plugin</artifactId>
                             <version>2.5.2</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.felix</groupId>
+                            <artifactId>maven-bundle-plugin</artifactId>
                         </plugin>
                     </plugins>
                 </pluginManagement>
